@@ -2153,6 +2153,7 @@ COB_EXPIMP void		cob_set_int	(cob_field *, const int);
 COB_EXPIMP int		cob_get_int	(cob_field *);
 COB_EXPIMP void		cob_set_llint   (cob_field *, cob_s64_t, cob_s64_t);
 COB_EXPIMP void		cob_set_llcon   (cob_field *, cob_s64_t);
+COB_EXPIMP void		cob_set_compx   (cob_field *, cob_s64_t);
 COB_EXPIMP cob_s64_t	cob_get_llint	(cob_field *);
 COB_EXPIMP void		cob_alloc_move(cob_field *, cob_field *, const int);
 /**************************************************/
