@@ -1,4 +1,9 @@
 
+2021-12-08  Ron Norman <rjn@inglenet.com>
+
+	* move.c.c,common.h: Added cob_set_compx for saving values into
+				COMP-X field
+
 2021-12-05  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c,coblocal.h: Removed unused/unsettable variable cob_ls_uses_cr
